# Evaluator_Matematic

./: CMakeLists.txt  graficaArbore.cpp  graficaArbore.h  main.cpp  meniuCalculator.cpp  meniuCalculator.h  parsareExpresie.cpp  parsareExpresie.h  preprocesare.cpp  preprocesare.h  readme.md  structuriDeDate.cpp  structuriDeDate.h  verificareParanteze.cpp  verificareParanteze.h  verificareSintaxaExpresiei.cpp  verificareSintaxaExpresiei.h
graphics/: graficaArbore.cpp  graficaArbore.h  meniuCalculator.cpp  meniuCalculator.h
parsing/: parsareExpresie.cpp  parsareExpresie.h  verificareParanteze.cpp  verificareParanteze.h  verificareSintaxaExpresiei.cpp  verificareSintaxaExpresiei.h
setup/: preprocesare.cpp  preprocesare.h  structuriDeDate.cpp  structuriDeDate.h
